# check-if-email-exists-rs

backend/: Cargo.toml
cli/: Cargo.toml
core/: Cargo.toml
