[package]
name = "reacher_backend"
version = "0.4.0"
edition = "2018"
license = "AGPL-3.0"
publish = false

[dependencies]
async-smtp = "0.9"
check-if-email-exists = { path = "../core", features = ["headless"] }
csv = "1.2.2"
dotenv = "0.15.0"
env_logger = "0.10"
log = "0.4"
sentry = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate" ] }
sqlxmq = "0.4"
tokio = { version = "1.29", features = ["macros"] }
uuid = "1.4"
warp = "0.3"
